# template_repo_experiments

./: .env_template  .gitignore  README.md  pyproject.toml
.dvc/: config
datasets/001_publications_dataset/: .gitignore  publications_dataset.jsonl.dvc
datasets/002_registry_names_dataset/: .gitignore  registry_names_dataset.json.dvc
etc/: setup_env.sh
projects/P00_template/: .gitignore  README.md  Snakefile  pyproject.toml
projects/P00_template/data/D00_random_data/: .gitignore  random_data.jsonl.dvc
projects/P00_template/notebooks/: N01_hello_word.ipynb
projects/P00_template/src/p00_template/: hello_world.py
projects/P00_template/src/scripts/: S01_generate_dataset.py  S02_clean_dataset.py
projects/P01_extraction_model/: .gitignore  Snakefile  _dvc.yaml  pyproject.toml  setup_env.sh
projects/P01_extraction_model/data/: .gitignore
projects/P01_extraction_model/etc/configs/: gpt4o_openai_config.json  large_mistral_config.json  o3_openai_config.json  small_mistral_config.json
projects/P01_extraction_model/etc/prompts/: annotation_prompt.txt  compare_registry_name_v1.txt  compare_two_results_v1.1.txt  compare_two_results_v1.txt  prompt_publications_v1.1.txt  prompt_publications_v1.txt
projects/P01_extraction_model/notebooks/: 05_test_prod_db.ipynb  99_01_mistral_small_perf.ipynb  99_parse_annotated_publications_dataset.ipynb  random_publications.jsonl
projects/P01_extraction_model/src/scripts/: S101_prepare_base_pubmed_dataset.py  S102_sample_dataset_from_prod.py  S201_annotate_with_llm.py  S201_annotate_with_llm_openai.py  S202_compare_with_transformers.py  S301_parse_llm_annotation.py  S401_compare_results.py  S401_compare_results_openai.py  S501_generate_report.py  S502_merge_into_one_dataset.py  S503_make_annotation_dataset.py  S504_make_registry_name_dataset.py  S601_measure_model_perfromance.py  S602_measure_current_model_perfromance.py
projects/P01_extraction_model/src/views/: mistral_batch.py  show_comparision.py  show_comparision2.py
projects/P01_extraction_model/workflow/: W00_extraction_dataset.smk  W01_extraction_model.smk
src/llm_inference/: README.md  logger_config.py  logger_mixin.py  settings.py
tests/test_backends/: conftest.py  highload_test_mistral.py  highload_test_mistral_async.py  test_mistral.py  (+3 more)
(+16 files in other folders)
